공정성, 독점 > 프로모션, bc독점 > 주간추첨, 제휴 진행중

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -442,19 +442,19 @@
                 </div>
                 <div class="hidden menu_depth p-2">
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/bc_contest.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_DailyContest"></use></svg>
                             <span class="font-medium">데일리 콘테스트</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/bc_promotion.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Promotion"></use></svg>
                             <span class="font-medium">프로모션</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/bc_weekly-raffle.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_WeeklyRaffle"></use></svg>
                             <span class="font-medium">주간 추첨</span>
                         </a>
@@ -474,7 +474,7 @@
                 </a>
             </div>
             <div class="menu_list bg-back">
-                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                <a href="/bcGame/casino/provably_fair.html" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_ProvablyFair"></use></svg>
                     <span class="font-medium">공정성</span>
                 </a>
