--- a/bingolist.html
+++ b/bingolist.html
@@ -26,7 +26,7 @@
         <!--  ** 사이드 메뉴 끝 ** -->
 
         <!--  ** 메인 보드 시작 ** -->
-        <div class="content">
+        <div class="content motop_open">
             <!-- ** 페이지 로딩 ** -->
             <div id="loadingContainer">
                 <svg width="25" viewBox="0 0 120 30" xmlns="http://www.w3.org/2000/svg" fill="#3BC117" class="w-12 h-12">
@@ -2362,6 +2362,12 @@
 
     <script src="/bcGame/dist/js/counterup/jquery.counterup.js"></script>
     <script src="/bcGame/dist/js/counterup/waypoints.min.js"></script>
+
+    <script>
+        $(window).on('load',function(){
+            $('.mo_top_menu .bingo').addClass('active');
+        })
+    </script>
 
 
     <script>
