--- a/casino/index.html
+++ b/casino/index.html
@@ -22,11 +22,11 @@
 
     <div class="flex relative">
         <!--  ** 사이드 메뉴 시작 ** -->
-        <div class="sidebar"></div>
+        <div class="sidebar casino_side"></div>
         <!--  ** 사이드 메뉴 끝 ** -->
 
         <!--  ** 메인 보드 시작 ** -->
-        <div class="content casino">
+        <div class="content casino motop_open">
             <!-- ** 페이지 로딩 ** -->
             <div id="loadingContainer">
                 <svg width="25" viewBox="0 0 120 30" xmlns="http://www.w3.org/2000/svg" fill="#3BC117" class="w-12 h-12">
@@ -74,6 +74,14 @@
                                 <div class="swiper-button-prev rounded mo_hide"><svg class="w-3 h-3 fill-basic rotate-180"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></div>
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <div class="container casino_main">
+                    <div class="casino_search flex-1 mx-2 relative">
+                        <svg class="absolute left-3 top-3 w-4 h-4 fill-place"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Search"></use></svg>
+                        <input type="text" class="form-control form-control-rounded bg-back2 pl-9" placeholder="게임이름 | 게임사 | 카테고리 태그">
+                        <svg class="absolute right-3 top-4 w-3 h-3 fill-title close_btn cursor-pointer"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Close"></use></svg>
                     </div>
                 </div>
 
@@ -8308,6 +8316,12 @@
 
     <script src="/bcGame/dist/js/counterup/jquery.counterup.js"></script>
     <script src="/bcGame/dist/js/counterup/waypoints.min.js"></script>
+
+    <script>
+        $(window).on('load',function(){
+            $('.mo_top_menu .casino').addClass('active');
+        })
+    </script>
 
 
     <script>
