프로필 지갑 링크 추가

--- a/_top_bar.html
+++ b/_top_bar.html
@@ -208,19 +208,19 @@
                 <div class="profile_box">
                     <div class="shadow-lg">
                         <ul class="p-3 rounded-t">
-                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                            <li><a href="/bcGame/wallet.html" class="flex items-center pl-2.5 h-10 basic-hover">
                                 <svg class="w-5 h-5 mr-2"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Wallet"></use></svg>
                                 <span>지갑</span>
                             </a></li>
-                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                            <li><a href="/bcGame/wallet.html?withdrawal" class="flex items-center pl-2.5 h-10 basic-hover">
                                 <svg class="w-5 h-5 mr-2"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_WithDraw"></use></svg>
                                 <span>출금</span>
                             </a></li>
-                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                            <li><a href="/bcGame/wallet.html?transaction" class="flex items-center pl-2.5 h-10 basic-hover">
                                 <svg class="w-5 h-5 mr-2"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Transaction"></use></svg>
                                 <span>거래</span>
                             </a></li>
-                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                            <li><a href="/bcGame/wallet.html?roll" class="flex items-center pl-2.5 h-10 basic-hover">
                                 <svg class="w-5 h-5 mr-2"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Analyze"></use></svg>
                                 <span>롤오버 개요</span>
                             </a></li>
@@ -228,7 +228,7 @@
                                 <svg class="w-5 h-5 mr-2"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_VipClub"></use></svg>
                                 <span>VIP 클럽</span>
                             </a></li>
-                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                            <li><a href="/bcGame/affiliate.html" class="flex items-center pl-2.5 h-10 basic-hover">
                                 <svg class="w-5 h-5 mr-2"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Affiliate"></use></svg>
                                 <span>제휴</span>
                             </a></li>
