--- a/_left_menu.html
+++ b/_left_menu.html
@@ -811,35 +811,35 @@
             <b class="text-tit font-bold">₩ 0</b>
         </div>
         <div class="grid grid-cols-4 pt-2 text-xs text-tit text-center font-bold">
-            <a href="javascript:;" class="w-full py-3">
+            <a href="/bcGame/wallet.html?deposit" class="w-full py-3">
                 <svg class="w-5 h-5 mx-auto mb-1 fill-title"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_TransferIn"></use></svg>
                 입금
             </a>
-            <a href="javascript:;" class="w-full py-3">
+            <a href="/bcGame/wallet.html?withdrawal" class="w-full py-3">
                 <svg class="w-5 h-5 mx-auto mb-1 fill-title"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_TransferOut"></use></svg>
                 출금
             </a>
-            <a href="javascript:;" class="w-full py-3">
+            <a href="/bcGame/wallet.html?buycrypto" class="w-full py-3">
                 <svg class="w-5 h-5 mx-auto mb-1" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none" class="buy-svg"><circle cx="9.99992" cy="14.25" r="8.91667" stroke="white" stroke-width="2"></circle><path d="M8.29867 9.58331H9.19517L9.19536 10.9593C9.19536 10.9656 9.19871 10.9687 9.20539 10.9685L9.89872 10.9576C9.90049 10.9576 9.90217 10.9569 9.90341 10.9556C9.90465 10.9544 9.90534 10.9528 9.90534 10.951L9.90647 9.58331H10.802L10.8022 10.9828C10.8022 10.9872 10.8039 10.9915 10.807 10.9947C10.8101 10.998 10.8143 11 10.8189 11.0004C11.3238 11.0431 11.8406 11.1355 12.2823 11.3811C12.6476 11.5841 12.8642 11.9013 12.9422 12.2944C13.0072 12.6225 12.9908 13.0129 12.8319 13.3154C12.7433 13.4841 12.6201 13.6271 12.462 13.7445C12.3909 13.7973 12.3016 13.8473 12.2167 13.8947C12.2086 13.8992 12.2091 13.9026 12.2182 13.9049C12.6911 14.0256 13.1643 14.2607 13.3672 14.7146C13.5483 15.1195 13.5239 15.6441 13.4149 16.0559C13.3534 16.2884 13.2581 16.4883 13.1293 16.6555C12.6156 17.3218 11.6098 17.447 10.8124 17.484C10.8056 17.4844 10.8022 17.4878 10.8022 17.4944L10.8018 18.9166H9.90515V17.5183C9.90515 17.5122 9.90193 17.5092 9.8955 17.5092L9.20577 17.5033C9.20444 17.5033 9.20311 17.5035 9.20187 17.504C9.20063 17.5045 9.19951 17.5052 9.19856 17.5061C9.1976 17.507 9.19685 17.5081 9.19633 17.5093C9.19582 17.5104 9.19555 17.5117 9.19555 17.513L9.19536 18.9166H8.29811V17.4906C8.29811 17.4861 8.29584 17.4838 8.2913 17.4838L6.50927 17.48C6.50822 17.48 6.50718 17.4798 6.50624 17.4793C6.50529 17.4789 6.50445 17.4783 6.50378 17.4775C6.50312 17.4768 6.50263 17.4759 6.50237 17.4749C6.50211 17.474 6.50208 17.473 6.50227 17.472L6.67915 16.4648C6.68016 16.4589 6.68381 16.4559 6.69012 16.4559C6.89985 16.4543 7.10933 16.4537 7.31856 16.4541C7.56449 16.4544 7.6638 16.3091 7.6638 16.0955C7.66418 14.8582 7.66437 13.621 7.66437 12.3839C7.66437 12.3164 7.65662 12.2611 7.6411 12.2178C7.57048 12.0216 7.41699 11.9219 7.18065 11.9187C7.08632 11.9173 6.86265 11.9166 6.50965 11.9165C6.50322 11.9165 6.5 11.9134 6.5 11.9072V11.0063C6.5 11.0009 6.50277 10.9983 6.50832 10.9983L8.286 11.0006C8.29395 11.0006 8.29792 10.9967 8.29792 10.989L8.29867 9.58331ZM11.1043 12.3339C10.9216 12.1265 10.5421 12.0311 10.2738 12.0005C9.9742 11.9664 9.62397 11.9606 9.22317 11.9834C9.21661 11.9837 9.21333 11.9871 9.21333 11.9936L9.21315 13.6894C9.21315 13.692 9.21419 13.6944 9.21606 13.6963C9.21793 13.6981 9.22048 13.6992 9.22317 13.6993C9.48297 13.7078 9.74258 13.7046 10.002 13.6898C10.2144 13.6778 10.4089 13.6437 10.6102 13.5952C10.8049 13.5482 10.9734 13.4565 11.1157 13.3201C11.1813 13.2573 11.225 13.195 11.2468 13.1333C11.354 12.8298 11.3065 12.5634 11.1043 12.3339ZM11.1405 14.7498C10.9198 14.6645 10.7113 14.6116 10.515 14.5912C10.1207 14.5503 9.68968 14.5426 9.22204 14.5681C9.21624 14.5684 9.21333 14.5715 9.21333 14.5772V16.4501C9.21333 16.4548 9.21579 16.4573 9.22071 16.4575C9.75381 16.4787 10.3124 16.4703 10.8323 16.3575C11.0616 16.3077 11.3599 16.193 11.5181 16.0158C11.7541 15.7512 11.7844 15.3683 11.5792 15.0785C11.4756 14.9323 11.3294 14.8227 11.1405 14.7498Z" fill="white"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M20.9734 12.6827C21.2601 11.898 21.4165 11.0506 21.4165 10.1666C21.4165 6.11656 18.1332 2.83331 14.0831 2.83331C13.199 2.83331 12.3514 2.98977 11.5666 3.2765C11.0548 3.20409 10.5318 3.16665 10 3.16665C9.18802 3.16665 8.39639 3.25397 7.63403 3.41975C9.30982 1.81748 11.5815 0.833313 14.0831 0.833313C19.2378 0.833313 23.4165 5.01199 23.4165 10.1666C23.4165 12.668 22.4325 14.9396 20.8304 16.6153C20.9961 15.8532 21.0834 15.0618 21.0834 14.25C21.0834 13.718 21.0459 13.1947 20.9734 12.6827Z" fill="white"></path></svg>
                 구매하기
             </a>
-            <a href="javascript:;" class="w-full py-3">
+            <a href="/bcGame/wallet.html?swap" class="w-full py-3">
                 <svg class="w-5 h-5 mx-auto mb-1 fill-title"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Swap"></use></svg>
                 스왑
             </a>
-            <a href="javascript:;" class="w-full py-3">
+            <a href="/bcGame/wallet.html?vault" class="w-full py-3">
                 <svg class="w-5 h-5 mx-auto mb-1" xmlns="http://www.w3.org/2000/svg" width="19" height="22" viewBox="0 0 19 22" fill="none" class="buy-svg"><rect x="1.1665" y="1.18506" width="16.6667" height="15.5" rx="3" stroke="white" stroke-width="2"></rect><rect x="1.33301" y="18.8517" width="4.66667" height="2.33333" rx="1.16667" fill="white"></rect><rect x="13" y="18.8517" width="4.66667" height="2.33333" rx="1.16667" fill="white"></rect><path d="M9.49967 8.93508C9.49967 10.2237 8.45501 11.2684 7.16634 11.2684C5.87768 11.2684 4.83301 10.2237 4.83301 8.93508C4.83301 7.64641 5.87768 6.60175 7.16634 6.60175C8.45501 6.60175 9.49967 7.64641 9.49967 8.93508Z" fill="white"></path></svg>
                 볼트프로
             </a>
-            <a href="javascript:;" class="w-full py-3">
+            <a href="/bcGame/wallet.html?nfts" class="w-full py-3">
                 <svg class="w-5 h-5 mx-auto mb-1 fill-title"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Nft"></use></svg>
                 NFTs
             </a>
-            <a href="javascript:;" class="w-full py-3">
+            <a href="/bcGame/wallet.html?roll" class="w-full py-3">
                 <svg class="w-5 h-5 mx-auto mb-1 fill-title"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Analyze"></use></svg>
                 롤오버
             </a>
-            <a href="javascript:;" class="w-full py-3">
+            <a href="/bcGame/wallet.html?transaction" class="w-full py-3">
                 <svg class="w-5 h-5 mx-auto mb-1 fill-title"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Transaction"></use></svg>
                 거래
             </a>
