--- a/_left_menu.html
+++ b/_left_menu.html
@@ -555,7 +555,7 @@
             <svg class="w-5 h-5 mx-auto mb-1 fill-basic" viewBox="0 0 25 24" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.3212 2.12156L21.258 7.89881C21.8707 8.40881 22.2247 9.16481 22.2247 9.96206V19.8148C22.2247 21.2976 21.0225 22.4998 19.5397 22.4998H14.6029V18.599C14.6029 18.0467 14.1552 17.599 13.6029 17.599H11.6029C11.0507 17.599 10.6029 18.0467 10.6029 18.599V22.4998H5.6662C4.18345 22.4998 2.9812 21.2976 2.9812 19.8148V9.96206C2.9812 9.16481 3.3352 8.40881 3.94795 7.89881L10.8847 2.12156C11.88 1.29281 13.326 1.29281 14.3212 2.12156Z"></path></svg>
             홈
         </a></li>
-        <li class="wallet"><a href="javascript:;" class="block w-full py-2">
+        <li class="wallet"><a href="/bcGame/wallet.html" class="block w-full py-2">
             <span class="flex items-center justify-center w-12 h-12 mx-auto rounded-full wallet_mo_btn"><svg class="w-5 h-5 fill-title"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Wallet"></use></svg></span>
             지갑
         </a></li>
