카지노 디테일 완료

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -49,7 +49,7 @@
         <div class="fold_line mb-4"></div>
 
         <div>
-            <div class="menu_wrap">
+            <div class="menu_wrap casino_wrap">
                 <!-- <div class="menu_list bg-back rounded flex items-center justify-between cursor-pointer active"> -->
                 <div class="menu_list bg-back rounded flex items-center justify-between cursor-pointer">
                     <a href="/bcGame/casino/index.html" class="flex items-center gap-5 h-full pl-4">
