상세 페이지 마무리

--- a/casino/bc_detail.html
+++ b/casino/bc_detail.html
@@ -1069,7 +1069,7 @@
         </div>
 
         <!-- 실시간 통계 모달 -->
-        <div class="draggable_modal w-[300px] transition-all bg-modaldark">
+        <div class="draggable_modal w-[300px] transition-all bg-white md:bg-modaldark shadow-md">
             <div class="draggable_modal_header relative p-3 bg-grey-600 rounded-t-md">
                 <p class="text-tit font-extrabold text-base text-center">실시간 통계</p>
                 <button class="absolute right-0 top-1.5 p-2 basic-hover draggable_modal_close"><svg class="w-4 h-4 close_btn cursor-pointer hover:-rotate-90 duration-500 transition-all"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Close"></use></svg></button>
