레이싱 마무리

--- a/_top_bar.html
+++ b/_top_bar.html
@@ -10,7 +10,7 @@
             </div>
             <a href="/bcGame/casino/index.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic casino_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Casino"></use></svg> 카지노</a>
             <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic sports_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg> 스포츠</button>
-            <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic horse_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Horse"></use></svg> 레이싱</button>
+            <a href="/bcGame/racing.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic horse_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Horse"></use></svg> 레이싱</a>
             <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic lottery_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Lottery"></use></svg> 복권</button>
         </div>
         <div class="casino_search flex-1 mx-2 relative">
